# flatten-markdown

./: LICENSE  README.md  flattened_markdown.md  pyproject.toml  setup.py
flatten_markdown/: __main__.py  core.py  utils.py
tests/: __init__.py  conftest.py  test_flatten.py  test_flatten_unflatten.py  test_unflatten.py
tree2md.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
