[tool.poetry]
name = "flatten-markdown"
version = "0.1.0"
description = ""
authors = ["Isaac Valdez <isaac_valdez@msn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
